--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.18.0",
+    "jose": "^6.1.0",
     "next": "^16.0.1",
     "prisma": "^6.18.0",
     "react": "^19.2.0",
